@@ -1721,6 +1721,23 @@ Class restartAction()
 		} else {
 			NSLog(@"Test issue #1179 failed. Needs to be tested with RetinaDispaly");
 		}
+
+			
+		// Testint CCFileUtils API
+		BOOL ret;
+		ret = [CCFileUtils retinaDisplayFileExistsAtPath:@"bugs/test_issue_1179.png"];
+		if( ret )
+			NSLog(@"Test #3: retinaDisplayFileExistsAtPath: OK");
+		else
+			NSLog(@"Test #3: retinaDisplayFileExistsAtPath: FAILED");
+
+
+		ret = [CCFileUtils retinaDisplayFileExistsAtPath:@"grossini-does_no_exist.png"];
+		if( !ret )
+			NSLog(@"Test #4: retinaDisplayFileExistsAtPath: OK");
+		else
+			NSLog(@"Test #4: retinaDisplayFileExistsAtPath: FAILED");
+
 		
 	}
 	return self;
@@ -1785,6 +1802,18 @@ Class restartAction()
 	// It can be RGBA8888, RGBA4444, RGB5_A1, RGB565
 	// You can change it at anytime.
 	[CCTexture2D setDefaultAlphaPixelFormat:kCCTexture2DPixelFormat_RGBA8888];	
+	
+	// When in iPad mode, CCFileUtils will append the "-ipad" to all loaded files
+	// eg: "sprite.png" -> "sprite-ipad.png",  "spritesheet.pvr.ccz" -> "spritesheet-ipad.pvr.ccz"
+	// If the -ipad file is not found, it will load the non-suffixed version
+	// By default the iPad suffix is: ""
+	[CCFileUtils setiPadSuffix:@"-ipad"];
+
+	// When in RetinaDisplay mode, CCFileUtils will append the "-hd" to all loaded files
+	// eg: "sprite.png" -> "sprite-hd.png",  "spritesheet.pvr.ccz" -> "spritesheet-hd.pvr.ccz"
+	// If the -hd file is not found, it will load the non-suffixed version
+	// By default the RetinaDisplay suffix is: "-hd"
+	[CCFileUtils setRetinaDisplaySuffix:@"-hd"];
 	
 	CCScene *scene = [CCScene node];
 	[scene addChild: [nextAction() node]];
